--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <script src="build/js/vendor.min.js"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
     <script src="bower_components/moment/min/moment.min.js"></script>
-    <title>TitleOfSite</title>
+    <title>Bike Index</title>
   </head>
   <body>
     <div class="container">
-        <h1>TitleOfSite</h1>
-        <form id="name-of-form">
+        <h1>Index of Stolen Bikes</h1>
+        <form id="bike-form">
           <div class="form-group">
-            <label for="field-id">Enter a number:</label>
-            <input id="field-id" type="number">
+            <label for="manufacturer">Enter a manufacture:</label>
+            <input id="manufacturer" type="text">
+            <label for="distance">Enter search distance:</label>
+            <input id="distance" type="number">
             <button class="btn-success" type="submit">Submit</button>
           </div>
         </form>
